# rust_kafka

./: .gitignore  Cargo.toml
src/: main.rs
src/handlers/: consumer.rs  garbage_collector.rs  mod.rs  producer.rs  topic.rs
src/models/: mod.rs
src/routes/: consumer_routes.rs  mod.rs  producer_routes.rs  topic_routes.rs
src/utils/: mod.rs
