[package]
name = "rust_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version="1.43.0", features=["full"] }
chrono = {version= "0.4.40",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
serde_json = "1.0.68"
tower = "0.5.2"
queues = "1.0.2"
kv = "0.24.0"
bytes = "1.0"